--- a/views/private/agregar_subcategorias.html
+++ b/views/private/agregar_subcategorias.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../../resources/css/estilo.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Agregar Subcategoria</title>
 </head>
@@ -20,111 +20,27 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
-
-
-
     <header>
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <!-- Container wrapper -->
-            <div class="container-fluid">
-                <!-- Toggle button -->
-                <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
-                    data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
-                </button>
-
-                <!-- Collapsible wrapper -->
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <!-- Navbar brand -->
-                    <a class="navbar-brand mt-2 mt-lg-0" href="#">
-                        <img src="../recursos/FURNICOM.png" height="60" alt="Furnicom logo" loading="lazy" />
-                    </a>
-                    <!-- Left links -->
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="../private/index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../private/agregar_categorias.html">Categorias</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../private/agregar_subcategorias.html">Subcategorias</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../private/agregar_productos.html">Productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../private/agregar_usuarios.html">Usuarios</a>
-                        </li>
-                    </ul>
-                    <!-- Left links -->
-                </div>
-                <!-- Collapsible wrapper -->
-
-                <!-- Right elements -->
-                <div class="d-flex align-items-center">
-                    <!-- Icon -->
-
-                    <a class="text-reset me-3" href="#">
-                        <i class="fas fa-shopping-cart"></i>
-                    </a>
-
-
-                    <!-- Notifications -->
-                    <div class="dropdown">
-
-                    </div>
-                    <!-- Avatar -->
-                    <div class="dropdown">
-                        <a class="dropdown-toggle d-flex align-items-center hidden-arrow" href="#"
-                            id="navbarDropdownMenuAvatar" role="button" data-mdb-toggle="dropdown"
-                            aria-expanded="false">
-                            <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle"
-                                height="25" alt="Black and White Portrait of a Man" loading="lazy" />
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuAvatar">
-                            <li>
-                                <a class="dropdown-item" href="#">My profile</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">Settings</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">Logout</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- Right elements -->
-            </div>
-            <!-- Container wrapper -->
-
-        </nav>
-
-        <!-- Navbar -->
+    
     </header>
-
-
     <br>
     <br>
     <br>
     <br>
     <br>
-
     <section>
-
         <div class="container">
-            <H4>Agregar Subcategoria</H4>
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Agregar
+            <button onclick="openCreate()" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target=".exampleModal">
+                Agregar Subcategoria
             </button>
-
+            <div class="container col-6">
+                <label>Buscar categoria:</label>
+                <input class="form-control me-2 light-table-filter" data-table="table" type="text">
+            </div>
             <!-- Modal -->
 
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            <div class="modal exampleModal" id="save-modal" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -133,33 +49,29 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <form>
+                            <form id="save-form">
+                                <input class="visually-hidden" type="number" id="id" name="id">
                                 <div class="mb-3">
                                     <label for="recipient-name" class="col-form-label">Nombre:</label>
-                                    <input type="text" class="form-control" id="recipient-name">
+                                    <input type="text" class="form-control" id="nombre" name="nombre">
                                 </div>
                                 <div class="mb-3">
                                     <label for="message-text" class="col-form-label">Descripcion:</label>
-                                    <textarea class="form-control" id="message-text"></textarea>
+                                    <textarea class="form-control" id="descripcion" name="descripcion"></textarea>
                                 </div>
                                 <div class="mb-3">
                                     <label for="formFileMultiple" class="form-label">Seleccione una imagen</label>
-                                    <input class="form-control" type="file" id="formFileMultiple" multiple />
+                                    <input class="form-control" id="archivo" type="file" name="archivo" accept=".jpg, .png" multiple />
                                 </div>
                                 <div class="mb-3">
-                                    <p>Seleccione una Categoria</p>
-                                    <select class="form-select" aria-label="Seleccione Categoria">
-                                        <option selected>Abrir para seleccionar</Abbr></option>
-                                        <option value="1">Sala</option>
-                                        <option value="2">Cocina</option>
-                                        <option value="3">Dormitorio</option>
+                                    <select class="form-select" id="categoria" name="categoria">
                                     </select>
                                 </div>
+                                <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-secondary" id="create">Agregar</button>
                             </form>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                            <button type="button" class="btn btn-primary">Guardar</button>
                         </div>
                     </div>
                 </div>
@@ -171,43 +83,30 @@
         <div class="container">
             <table class="table table-responsive-sm">
                 <thead>
-                    <tr>
-                        <th scope="col">#</th>
+                    <tr id="records"></tr>
                         <th scope="col">Nombre</th>
                         <th scope="col">Descripción</th>
                         <th scope="col">Imagen</th>
                         <th scope="col">Categoria</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td colspan="2">Larry the Bird</td>
-                        <td>@twitter</td>
-                        <td>@mdo</td>
-                    </tr>
+                <tbody id="tbody-rows">
+
                 </tbody>
             </table>
         </div>
     </section>
+    <footer>
 
+    </footer>
 
     <br>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
+    <script type="text/javascript" src="../../controllers/dashboard/account.js"></script>
+    <script type="text/javascript" src="../../recursos/js/sweetalert.min.js"></script>
+    <script type="text/javascript" src="../../controllers/components.js"></script>
+    <script type="text/javascript" src="../../controllers/dashboard/subcategoria.js"></script>
+
 </body>
 
 </html>
