--- a/views/private/main.html
+++ b/views/private/main.html
@@ -45,17 +45,15 @@
         </div>
 
 
-        <script type="text/javascript"
-        <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+        <script type="text/javascript" <script src="https://kit.fontawesome.com/eb496ab1a0.js"
+            crossorigin="anonymous"></script>
         <!-- Option 1: Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
-        <script type="text/javascript" src="../controllers/dashboard/main.js"></script>
+        <script type="text/javascript" src="../../controllers/dashboard/account.js"></script>
         <script type="text/javascript" src="../../recursos/js/sweetalert.min.js"></script>
         <script type="text/javascript" src="../../controllers/components.js"></script>
-        <script type="text/javascript" src="../../controllers/dashboard/account.js"></script>
-
     </body>
 </main>
 
