--- a/views/private/agregar_productos.html
+++ b/views/private/agregar_productos.html
@@ -24,6 +24,10 @@
                 data-bs-target=".exampleModal">
                 Agregar
             </button>
+            <div class="container col-6">
+                <label>Buscar producto:</label>
+                <input class="form-control me-2 light-table-filter" data-table="table" type="text">
+            </div>
             <!-- Modal -->
             <div class="modal exampleModal " id="save-modal" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
@@ -72,9 +76,10 @@
                                     <p>Estado del producto</p>
                                     <!-- Default switch -->
                                     <div class="form-check form-switch">
-                                        <input class="form-check-input" type="checkbox" role="switch"
-                                            id="estados" name="estados"/>
-                                        <label class="form-check-label" for="flexSwitchCheckDefault">Disponible/ No disponible</label>
+                                        <input class="form-check-input" type="checkbox" role="switch" id="estados"
+                                            name="estados" />
+                                        <label class="form-check-label" for="flexSwitchCheckDefault">Disponible/ No
+                                            disponible</label>
                                     </div>
                                 </div>
                                 <div class="mb-3">
@@ -86,7 +91,6 @@
                             </form>
                         </div>
                         <div class="modal-footer">
-
                         </div>
                     </div>
                 </div>
