--- a/views/private/agregar_subcategorias.html
+++ b/views/private/agregar_subcategorias.html
@@ -23,11 +23,6 @@
     <header>
     
     </header>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <section>
         <div class="container">
             <!-- Button trigger modal -->
@@ -45,7 +40,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">New message</h1>
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Crear subcategoria</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
