--- a/views/private/clientes.html
+++ b/views/private/clientes.html
@@ -1,232 +1,119 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilo.css">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <title>Cliente</title>
+    <link rel="stylesheet" href="../../resources/css/estilo.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
+    <title>Gestionar clientes</title>
 </head>
 
 <body>
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
-
-
-
     <header>
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <!-- Container wrapper -->
-            <div class="container-fluid">
-                <!-- Toggle button -->
-                <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
-                    data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
-                </button>
 
-                <!-- Collapsible wrapper -->
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <!-- Navbar brand -->
-                    <a class="navbar-brand mt-2 mt-lg-0" href="#">
-                        <img src="../recursos/FURNICOM.png" height="60" alt="Furnicom logo" loading="lazy" />
-                    </a>
-                    <!-- Left links -->
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="../private/index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../private/agregar_categorias.html">Categorias</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../private/agregar_subcategorias.html">Subcategorias</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../private/agregar_productos.html">Productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../private/agregar_usuarios.html">Usuarios</a>
-                        </li>
-                    </ul>
-                    <!-- Left links -->
-                </div>
-                <!-- Collapsible wrapper -->
-
-                <!-- Right elements -->
-                <div class="d-flex align-items-center">
-                    <!-- Icon -->
-
-                    <a class="text-reset me-3" href="#">
-                        <i class="fas fa-shopping-cart"></i>
-                    </a>
-
-
-                    <!-- Notifications -->
-                    <div class="dropdown">
-
-                    </div>
-                    <!-- Avatar -->
-                    <div class="dropdown">
-                        <a class="dropdown-toggle d-flex align-items-center hidden-arrow" href="#"
-                            id="navbarDropdownMenuAvatar" role="button" data-mdb-toggle="dropdown"
-                            aria-expanded="false">
-                            <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle"
-                                height="25" alt="Black and White Portrait of a Man" loading="lazy" />
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuAvatar">
-                            <li>
-                                <a class="dropdown-item" href="#">My profile</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">Settings</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">Logout</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- Right elements -->
-            </div>
-            <!-- Container wrapper -->
-
-        </nav>
-
-        <!-- Navbar -->
     </header>
-
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <section>
-
+    <main>
         <div class="container">
-            <H4>Agregar Clientes</H4>
+            <H4>Gestionar clientes</H4>
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Agregar
-            </button>
-
+            <div class="container col-6">
+                <label>Buscar cliente:</label>
+                <input class="form-control me-2 light-table-filter" data-table="table" type="text">
+            </div>
             <!-- Modal -->
-
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            <div class="modal exampleModal " id="save-modal" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">Agregar Productos</h1>
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Gestionar cliente</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <form>
+                            <form id="save-form">
+                                <input class="visually-hidden" type="number" id="id" name="id">
+                                <input class="visually-hidden" type="text" id="clave" name="clave">
                                 <div class="mb-3">
-                                    <label for="recipient-name" class="col-form-label">Nombre</label>
-                                    <input type="text" class="form-control" id="recipient-name">
+                                    <label for="recipient-name" class="col-form-label">Nombre:</label>
+                                    <input type="text" class="form-control" id="nombre" name="nombre">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="recipient-name" class="col-form-label">Apellido</label>
-                                    <input type="text" class="form-control" id="recipient-name">
+                                    <label for="recipient-name" class="col-form-label">Apellido:</label>
+                                    <input type="text" class="form-control" id="apellido" name="apellido">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="recipient-name" class="col-form-label">Dui</label>
-                                    <input type="text" class="form-control" id="recipient-name">
+                                    <label for="recipient-name" class="col-form-label">Dui:</label>
+                                    <input type="text" class="form-control" id="dui" name="dui">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="recipient-name" class="col-form-label">Correo</label>
-                                    <input type="text" class="form-control" id="recipient-name">
+                                    <label for="message-text" class="col-form-label">Correo:</label>
+                                    <input type="text" class="form-control" id="correo" name="correo" required>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="recipient-name" class="col-form-label">Apellido</label>
-                                    <input type="text" class="form-control" id="recipient-name">
+                                    <label for="message-text" class="col-form-label">Direccion:</label>
+                                    <textarea class="form-control" id="direccion" name="direccion"></textarea>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="exampleFormControlTextarea1" class="form-label">Dirección</label>
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                    <p>Estado del cliente:</p>
+                                    <!-- Default switch -->
+                                    <div class="form-check form-switch">
+                                        <input class="form-check-input" type="checkbox" role="switch" id="estados"
+                                            name="estados" />
+                                        <label class="form-check-label" for="flexSwitchCheckDefault">Suspendido /
+                                            activo</label>
+                                    </div>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="exampleFormControlTextarea1" class="form-label">Contraseña</label>
-                                    <input type="password" class="form-control" id="recipient-name">
+                                    <label for="message-text" class="col-form-label">Telefono:</label>
+                                    <input type="text" class="form-control" id="telefono" name="telefono" required>
                                 </div>
-                                <div class="mb-3">
-                                    <p>Estado del cliente</p>
-                                    <select class="form-select" aria-label="Seleccione Categoria">
-                                        <option selected>Abrir para seleccionar</Abbr></option>
-                                        <option value="1">si</option>
-                                        <option value="2">no</option>
-                                    </select>
-                                </div>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                <button type="submit" class="btn btn-primary" id="create">Guardar</button>
                             </form>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                            <button type="button" class="btn btn-primary">Guardar</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <br>
 
-        <!-- Tabla de datos -->
         <div class="container">
-            <table class="table table-responsive-sm">
+            <table class="table highlight">
                 <thead>
+                    <tr id="records"></tr>
                     <tr>
-                        <th scope="col">#</th>
                         <th scope="col">Nombre</th>
                         <th scope="col">Apellido</th>
-                        <th scope="col">Dui</th>
                         <th scope="col">Correo</th>
-                        <th scope="col">Dirección</th>
-                        <th scope="col">Clave</th>
+                        <th scope="col">Direccion</th>
                         <th scope="col">Estado</th>
+                        <th scope="col">Telefono</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                        <td>@mdo</td>
-                        <td>Thornton</td>
-                        <td>Thornton</td>
-                        <td>Thornton</td>
-                    </tr>
-                </tbody>
+                <tbody id="tbody-rows"></tbody>
             </table>
         </div>
-    </section>
 
-    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
-    <br>
+    </main>
+    <footer>
+
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
+    <script type="text/javascript" src="../../resources/js/sweetalert.min.js"></script>
+    <script type="text/javascript" src="../../controllers/dashboard/account.js"></script>
+    <script src="../../controllers/components.js"></script>
+    <script type="text/javascript" src="../../controllers/dashboard/cliente.js"></script>
+
 
 </body>
 
