--- a/views/private/agregar_productos.html
+++ b/views/private/agregar_productos.html
@@ -78,8 +78,8 @@
                                     <div class="form-check form-switch">
                                         <input class="form-check-input" type="checkbox" role="switch" id="estados"
                                             name="estados" />
-                                        <label class="form-check-label" for="flexSwitchCheckDefault">Disponible/ No
-                                            disponible</label>
+                                        <label class="form-check-label" for="flexSwitchCheckDefault">No disponible/ 
+                                            Disponible</label>
                                     </div>
                                 </div>
                                 <div class="mb-3">
