--- a/views/private/main.html
+++ b/views/private/main.html
@@ -14,49 +14,53 @@
     <title>Furnicome</title>
 </head>
 
-<main>
 
+<body>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
 
-    <body>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
+    <header>
 
-        <header>
+    </header>
 
-        </header>
-
-        <section>
-            <!-- Título del contenido principal -->
-            <h3 class="center-align">Bienvenido</h3>
-            <!-- Se muestra un saludo según la hora del cliente -->
-            <div class="row">
-                <h4 class="center-align blue-text" id="greeting"></h4>
+    <main class="container">
+        <!-- Título del contenido principal -->
+        <h3 class="text-center">Bienvenido</h3>
+        <!-- Se muestra un saludo según la hora del cliente -->
+        <div class="row">
+            <h4 class="text-center blue-text" id="greeting"></h4>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4 ">
+                <!-- Se muestra un gráfico de barra con la cantidad de productos por categoría -->
+                <canvas id="chart1"></canvas>
             </div>
-        </section>
-
-        <br>
-        <div class="container-fluid">
-
+            <div class="col-sm-12 col-md-6 col-lg-4 ">
+                <!-- Se muestra un gráfico de barra con la cantidad de productos por categoría -->
+                <canvas id="chart2"></canvas>
+            </div>
         </div>
 
 
-        <br>
-        <div class="fo1">
-            <footer class="text-center text-lg-start  text-muted" id="c1">
+        <script src="../../resources/js/chart.umd.min.js"></script>
+    </main>
 
-            </footer>
-        </div>
+    <div class="fo1">
+        <footer class="text-center text-lg-start  text-muted" id="c1">
+
+        </footer>
+    </div>
 
 
-        <script type="text/javascript" <script src="https://kit.fontawesome.com/eb496ab1a0.js"
-            crossorigin="anonymous"></script>
-        <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-        <script type="text/javascript" src="../../controllers/dashboard/account.js"></script>
-        <script type="text/javascript" src="../../recursos/js/sweetalert.min.js"></script>
-        <script type="text/javascript" src="../../controllers/components.js"></script>
-    </body>
-</main>
+
+    <script type="text/javascript" src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../../controllers/dashboard/account.js"></script>
+    <script type="text/javascript" src="../../recursos/js/sweetalert.min.js"></script>
+    <script type="text/javascript" src="../../controllers/components.js"></script>
+    <script type="text/javascript" src="../../controllers/main.js"></script>
+</body>
 
 </html>
